@@ -195,6 +195,7 @@ Chronological list of authors
   - Marcelo D. Poleto
   - Ricky Sexton
   - Rafael R. Pappalardo
+  - Tengyu Xie
 
 
 External code
